app1.yml
apiVersion: v1
kind: Pod
metadata:
  name: web1
  labels:
    app1: web
spec:
  containers:
  - name: www
    image: nginx:1.21-alpine
