app2.yml
apiVersion: v1
kind: Pod
metadata:
  name: web2
  labels:
    app1: web
spec:
  containers:
  - name: www
    image: httpd:2.4-alpine
