nginx-lab7.yml
apiVersion: v1
kind: Pod
metadata:
    name: web7
    labels:
      app: web7
spec:
  containers:
  - name: www
    image: nginx:1.21-alpine
    volumeMounts:
    - name: config
      mountPath: "/etc/nginx/nginx.conf"
      subPath: "nginx.conf"
  volumes:
  - name: config
     configMap:
       name: nginx-config
