nginx.yaml
apiVersion: v1
kind: Pod
metadata:
    name: web
    labels:
        app: myapp
spec:
    containers:
    - name: www
    image: nginx:1.21-alpine
