nginx.yml
apiVersion: v1
kind: Pod
metadata:
    name: web
spec:
    containers:
    - name: www
      image: nginx:1.21-alpine
