web-lab6-ds.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: web-ds
spec:
  selector:
    matchLabels:
      app: web-ds
  template:
    metadata:
      labels:
        app: web-ds
    spec:
      containers:
      - name: debug
        image: alpine:3.12
        command: ["bin/sh","-c","while true; do echo `hostname` `date` >> /mnt/index.html; sleep 300; done"]
        volumeMounts:
        - name: data
          mountPath: /mnt
      volumes:
      - name: data
        persistentVolumeClaim:
            claimName: nfs-pvc
