web-lab8.yml
apiVersion: v1
kind: Pod
metadata:
  name: web-secret
  labels:
    app: web-secret
spec:
  containers:
  - name: www
    image: nginx:1.17-alpine
    volumeMounts:
    - name: config
      mountPath: "/etc/nginx/nginx.conf"
      subPath: "nginx.conf"
  volumes:
  - name: config
    secret:
      secretName: nginx-config
