web3.yml
apiVersion: v1
kind: Pod
metadata:
  name: web3
  labels:
    app2: web
spec:
  containers:
  - name: www
    image: nginx:1.21-alpine
