s1.yml
apiVersion: v1
kind: Service
metadata:
  name: s1
spec:
  selector:
    app1: web
  type: CluserIP
  ports:
  - port:80
    targetPort: 80
