s2.yml
apiVersion: v1
kind: Service
metadata:
  name: s2
spec:
  selector:
    app2: web
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30000
