service-nfs.yml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
spec:
  selector:
    app: web-deploy
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30002
