svc-lab4.yml
apiVersion: v1
kind: Service
metadata:
  name: lab4
spec:
  selector:
    app: web
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30001
