ingress-path.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-path
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: host41.formation.local
    http:
      paths:
      - path: /dep1
        pathType: Prefix
        backend:
          service:
            name: service1
            port:
              number: 80
      - path: /dep2
        pathType: Prefix
        backend:
          service:
            name: service2
            port:
              number: 80
